# mesa

./: .clang-format-include  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .pick_status.json  0001-fix-the-Chip-oland-uvd-decoder-2048x1152-upto-2560x1.patch  Android.common.mk  Android.mk  CODEOWNERS  README.rst  SConstruct  dxbc-test.ps1  meson.build  meson_options.txt  mr-12706  mr-13866  mr-14297  mr-14511  mr-16174  mr-16240  tatus
docs/: Doxyfile  How-to-make-an-apitrace-for-different-types-of-games-and-applications.md  How-to-make-an-apitrace-using-Windows-OS.md  amber.rst  android.rst  application-issues.rst  bugs.rst  codingstyle.rst  conf.py  contents.html  contents.rst  debugging.rst  dependencies.rst  devinfo.rst  dispatch.rst  download.rst  doxygen-wrapper.py  egl.rst  envvars.html  envvars.rst  faq.rst  features.txt  gbm.rst  gitlab-ci.yml  gitlab.html  helpwanted.rst  history.rst  index.rst  install.rst  isaspec-doc-wrapper.py  license.html  license.rst  macos.rst  meson.build  meson.rst  opengles.rst  osmesa.rst  perf.rst  perfetto.rst  pps.rst  (+17 more)
docs/_extra/specs/: EGL_MESA_swap_control_tear.txt  EGL_MESA_unsynchronized_image.txt  MESA_bgra.txt  MESA_sampler_objects.spec  MESA_texture_tiling.spec  enums.txt
docs/_exts/: depfile.py  formatting.py  nir.py
docs/ci/: LAVA.rst  bare-metal.rst  docker.rst  fdo-cache  index.rst  kernel.rst  local-traces.rst  skqp.rst
docs/doxygen/: Doxyfile.in  meson.build
docs/drivers/: anv.rst  asahi.rst  d3d12.rst  freedreno.rst  lima.rst  llvmpipe.rst  panfrost.rst  radv.rst  svga3d.rst  v3d.rst  vc4.rst  venus.rst  virgl.rst  zink.rst
docs/drivers/amd/: hang-debugging.rst
docs/drivers/freedreno/: ir3-notes.rst  isaspec.rst
docs/gallium/: buffermapping.rst  context.rst  debugging.rst  distro.rst  index.rst  resources.rst  screen.rst  tgsi.rst
docs/gallium/cso/: rasterizer.rst
docs/isl/: aux-tracking.rst  aux.rst  ccs.rst  formats.rst  index.rst  tiling.rst  units.rst
docs/mesa3d_theme/: layout.html  search.html  theme.conf
docs/mesa3d_theme/static/: menu.css  rst.css  screen.css_t
docs/mesa3d_theme/static/assets/: menu.css  (+3 more)
docs/nir/: alu.rst  control_flow.rst  index.rst  tex.rst
docs/relnotes/: 21.0.0.rst  22.0.0.rst  new_features.txt
docs/specs/: MESA_framebuffer_flip_x.txt  MESA_framebuffer_swap_xy.txt
docs/vulkan/: base-objs.rst  dispatch.rst  renderpass.rst
include/: copper_interface.h  dri_internal.h  kopper_interface.h  meson.build
include/CL/: cl_icd.h  cl_mesa_extras.h
include/D3D9/: d3d9.h  d3d9types.h
include/EGL/: eglext.h
include/GL/: gl.h  glcorearb.h  glext.h  mesa_glinterop.h  osmesa.h
include/GL/internal/: dri_interface.h
include/GLES2/: gl2ext.h
include/android_stub/sync/: sync.h
include/android_stub/system/: window.h
include/drm-uapi/: amdgpu_drm.h  drm.h  drm_fourcc.h  i915_drm.h  lima_drm.h  msm_drm.h  panfrost_drm.h  panthor_drm.h  pvr_drm.h  rocket_drm.h  tegra_drm.h  v3d_drm.h  virtgpu_drm.h  xe_drm.h
include/pci_ids/: i965_pci_ids.h  iris_pci_ids.h  loongson_pci_ids.h
include/vulkan/: vk_android_native_buffer.h  vulkan_core.h
src/amd/common/: ac_debug.c  ac_gpu_info.c  ac_gpu_info.h  ac_msgpack.c  ac_msgpack.h  ac_nir.c  ac_nir.h  ac_nir_cull.c  ac_nir_lower_esgs_io_to_mem.c  ac_nir_lower_global_access.c  ac_nir_lower_image_opcodes_cdna.c  ac_nir_lower_io_to_mem.c  ac_nir_lower_ngg.c  ac_nir_lower_ps.c  ac_nir_lower_taskmesh_io_to_mem.c  ac_nir_lower_tess_io_to_mem.c  ac_nir_opt_outputs.c  ac_perfcounter.c  ac_perfcounter.h  ac_rgp.c  ac_rgp.h  ac_rgp_elf_object_pack.c  ac_rtld.c  ac_rtld.h  ac_shader_args.c  ac_shader_args.h  ac_shader_util.c  ac_shader_util.h  ac_spm.c  ac_spm.h  ac_sqtt.c  ac_sqtt.h  ac_surface.c  ac_surface.h  ac_surface_dcc_address_test.c  ac_surface_htile_address_test.c  ac_surface_meta_address_test.c  ac_surface_modifier_test.c  ac_surface_test_common.h  amd_family.c  (+5 more)
src/android_stub/: cutils_stub.cpp  meson.build  nativewindow_stub.cpp
src/compiler/clc/: clc.c  clc.h  clc_helpers.cpp  clc_helpers.h  meson.build
src/intel/ds/: intel_driver_ds.cc  intel_driver_ds.h  intel_pps_driver.cc  intel_pps_driver.h  intel_pps_perf.cc  intel_tracepoints.py  meson.build
src/intel/tracepoints/: meson.build
src/microsoft/vulkan/: dzn_cmd_buffer.c  dzn_cmd_buffer.cpp  dzn_cmd_dispatch_functions  dzn_cmd_exec_functions  dzn_descriptor_set.c  dzn_descriptor_set.cpp  dzn_device.c  dzn_device.cpp  dzn_fence.cpp  dzn_formats.cpp  dzn_image.c  dzn_image.cpp  dzn_meta.c  dzn_meta.cpp  dzn_nir.c  dzn_nir.h  dzn_pass.c  dzn_pass.cpp  dzn_physical_device_enum.h  dzn_pipeline.c  dzn_pipeline.cpp  dzn_pipeline_cache.cpp  dzn_private.h  dzn_query.cpp  dzn_semaphore.cpp  dzn_shader.cpp  dzn_state.cpp  dzn_sync.cpp  dzn_util.c  dzn_util.cpp  dzn_wsi.c  dzn_wsi.cpp  dzn_wsi_win32.c  meson.build
src/panfrost/clc/: meson.build  panfrost_clc.c
src/panfrost/ds/: hwc_names.h  meson.build  pan_pps_driver.cc  pan_pps_driver.h
src/panfrost/tools/: meson.build
src/tool/grtrace/: Cargo.toml  meson.build
src/tool/pps/: meson.build  pps.h  pps_config.cc  pps_counter.h  pps_datasource.cc  pps_datasource.h  pps_device.cc  pps_device.h  pps_driver.cc  pps_driver.h  pps_producer.cc
src/virtio/vulkan/: .clang-format  README.rst  meson.build  vn_android.c  vn_android.h  vn_buffer.c  vn_buffer.h  vn_command_buffer.c  vn_command_buffer.h  vn_common.c  vn_common.h  vn_cs.c  vn_cs.h  vn_descriptor_set.c  vn_descriptor_set.h  vn_device.c  vn_device.h  vn_device_memory.c  vn_device_memory.h  vn_entrypoints_gen.py  vn_extensions.py  vn_extensions_gen.py  vn_feedback.c  vn_feedback.h  vn_icd.c  vn_icd.py  vn_image.c  vn_image.h  vn_instance.c  vn_instance.h  vn_physical_device.c  vn_physical_device.h  vn_pipeline.c  vn_private.h  vn_queue.c  vn_queue.h  vn_render_pass.c  vn_render_pass.h  vn_renderer.h  vn_renderer_internal.c  (+10 more)
src/vulkan/rust/: boxed.rs  examples.rs  meson.build  vk.rs  vulkan_h_bindgen.h  vulkan_runtime_bindgen.h
src/vulkan/trace-layer/: VkLayer_MESA_trace.json  meson.build  trace_layer.cc  trace_layer.h  trace_layer_gen.py
(+5428 files in other folders)
